Add compatibility wrapper for generic data loader
Also rolled back to prior versions of batch_writer.py and alexnet.py

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ neon/backends/util/cuda_capability
 neon/backends/kernels/ptx
 neon/backends/kernels/pre
 neon/backends/kernels/dump
+neon/data/loader/loader
