Update comment to remove mention of batch norm. Fixes #241.

--- a/examples/alexnet.yaml
+++ b/examples/alexnet.yaml
@@ -48,7 +48,7 @@ relu: &relu_act
 
 layers:
 -
-    type: Conv # Convolution + Bias + BN + Activation
+    type: Conv # Convolution + Bias + Activation
     config:
         name: conv1
         fshape: [11, 11, 64]
