Added PixelWiseOneHot data transformer. Modified to DumpImage transformer to accept single channel images (#282) Fix channel ordering for mean subtraction Move and clean up whales example Move and clean up music genres example Redo video example to streamline ingest, test, and demo Style fixes Update READMEs Fix bin/neon to work with aeon on alexnet yaml example

--- a/examples/imagenet/alexnet.yaml
+++ b/examples/imagenet/alexnet.yaml
@@ -247,3 +247,21 @@ optimizer:
 
 dataset:
     name: i1k
+    train_config:
+        shuffle_manifest: True
+        shuffle_every_epoch: True
+        image:
+            height: 224
+            width: 224
+            scale: [0.875, 0.875]
+            flip_enable: True
+            center: False
+        label:
+            binary: False
+    test_config:
+        image:
+            height: 224
+            width: 224
+            scale: [0.875, 0.875]
+        label:
+            binary: False
