--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ numpy==1.11.1
 pyyaml==3.12
 pep8==1.7.0
 flake8==3.0.4
+funcsigs==0.4
 pytest==3.0.1
 pytest-cov==2.3.1
+pytest-mock==1.6.0
 posix_ipc==1.0.0
 pillow==3.3.1
 pylint==1.6.4
