Fixed doc built (#1103)
* add proxy for sphinx-build

* skip cpu for doc built

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -26,7 +26,7 @@ ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
 $(error The '$(SPHINXBUILD)' command was not found. Make sure you have Sphinx installed, then set the SPHINXBUILD environment variable to point to the full path of the '$(SPHINXBUILD)' executable. Alternatively you can add the directory with the executable to your PATH. If you don't have Sphinx installed, grab it from http://sphinx-doc.org/)
 endif
 SPHINXCMD     = `which ${SPHINXBUILD}`
-SPHINXENVCMD  = env -i ${SPHINXCMD}
+SPHINXENVCMD  = env -i http_proxy=${http_proxy} https_proxy=${https_proxy} ${SPHINXCMD}
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
