SSD optimization: Dilated Convolution (#1101)
* add forward for dilated convoution

* add backward

* fix a bug for no-delta conv-dialted backfilter

* fix a bug for no-delta conv-dialted backfilter

* refactor some c code

* fix weight bug for dilated conv

* fix buf for conv-dilated with CHWN weight layout

* modify some codes

* rm unchanged file

* Update batchNorm.c

* add beta function for conv and pooling to enable SSD

* rm change of batchnorm

* fix dilated conv bug

--- a/neon/backends/mklEngine/Makefile
+++ b/neon/backends/mklEngine/Makefile
@@ -36,7 +36,7 @@ endif
 
 all:$(MKL_ENGINE_SO) $(MATH_CPU_SO)
 
-$(MKL_ENGINE_SO): src/conv.c src/pooling.c src/relu.c src/batchNorm.c src/concat.c src/softmax.c $(SRCS)
+$(MKL_ENGINE_SO): src/conv.c src/pooling.c src/relu.c src/batchNorm.c src/concat.c src/softmax.c src/conv_dilate.c $(SRCS)
 	@echo "Building $@..."
 	$(CC) $^ -shared -o $@ $(COMMON_FLAGS) $(CFLAGS)
 
