--- a/examples/mnist_mlp.yaml
+++ b/examples/mnist_mlp.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 # ----------------------------------------------------------------------------
 
-backend: gpu
+backend: mkl
 epochs: 10
 batchsize: 128
 
